--- a/frontend/index.html
+++ b/frontend/index.html
@@ -109,7 +109,7 @@
             <iconify-icon icon="lucide:braces"></iconify-icon>
             <div>
                 <h4>Placeholders</h4>
-                <p>Use <code>{bot_persona}</code>, <code>{scenario}</code>, <code>{user_persona}</code>, <code>{{user}}</code> and <code>{{char}}</code> in your profile tabs. They will be replaced by content from the incoming API request's.</p>
+                <p>Use <code>{bot_persona}</code>, <code>{scenario}</code>, <code>{user_persona}</code>, <code>{summary}</code>, <code>{{user}}</code> and <code>{{char}}</code> in your profile tabs. They will be replaced by content from the incoming API request's.</p>
             </div>
         </div>
         <div class="doc-item btn-green">
