github link on footer

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -163,8 +163,16 @@
     </section>
 
     <footer class="foot">
-      <p>Lorem ipsum</p>
-      <button id="logout-btn" class="btn btn-red">Logout</button>
+        <div class="footer-left"></div>
+        <div class="footer-center">
+            <a href="https://github.com/qxlies/latex-proxy" target="_blank" rel="noopener noreferrer" class="footer-link">
+                <iconify-icon icon="mdi:github"></iconify-icon>
+                <span>Source code</span>
+            </a>
+        </div>
+        <div class="footer-right">
+            <button id="logout-btn" class="btn btn-red">Logout</button>
+        </div>
     </footer>
   </main>
   <script type="module" src="./app.js"></script>
