chat history + pinned chats

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -133,11 +133,17 @@
           <div class="tabs-head">
             <div class="tabs-title">Tabs</div>
              <div class="tab-actions">
-               <button id="moveTabUp" class="icon-btn" title="Move up" aria-label="Move up">
+                <button id="moveTabUp" class="icon-btn" title="Move up" aria-label="Move up">
                    <iconify-icon icon="lucide:arrow-up"></iconify-icon>
                </button>
                <button id="moveTabDown" class="icon-btn" title="Move down" aria-label="Move down">
                    <iconify-icon icon="lucide:arrow-down"></iconify-icon>
+               </button>
+               <button id="toggleTab" class="icon-btn btn-ghost" title="Toggle" aria-label="Toggle">
+                   <iconify-icon icon="lucide:eye"></iconify-icon>
+               </button>
+               <button id="deleteTab" class="icon-btn btn-red" title="Delete" aria-label="Delete">
+                   <iconify-icon icon="lucide:trash-2"></iconify-icon>
                </button>
                <button id="addTab" class="icon-btn add-tab btn-green" title="Add tab" aria-label="Add tab">
                  <iconify-icon icon="lucide:plus"></iconify-icon>
