extra params in query

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,9 +9,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/codemirror.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/theme/darcula.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
   <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
   <script src="https://unpkg.com/gpt-tokenizer"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/codemirror.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/mode/javascript/javascript.min.js"></script>
 </head>
 <body>
   <div id="auth-container">
@@ -101,6 +105,13 @@
            <input id="model" type="text" placeholder="deepseek-r1-0528">
          </label>
       </div>
+     <details class="spoiler" style="margin-top: 14px;">
+       <summary>Extra Params</summary>
+       <div class="field" style="margin-top: 8px;">
+           <span>JSON</span>
+           <textarea id="extraParams" rows="4" placeholder='{ "temperature": 0.7 }'></textarea>
+       </div>
+     </details>
     </section>
 
     <section class="panel documentation">
