fix in documentation

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -119,7 +119,7 @@
             <iconify-icon icon="lucide:triangle-alert"></iconify-icon>
             <div>
                 <h4>Setup</h4>
-                <p>Paste this <code id="copySetupText" class="copyable-code">&lt;user&gt;{{user}}&lt;/user&gt;&lt;character&gt;{{char}}&lt;/character&gt;</code> to your system prompt on JanitorAI (click to copy)</p>
+                <p>Paste this <code id="copySetupText" class="copyable-code">&lt;!user&gt;{{user}}&lt;/user&gt;&lt;character&gt;{{char}}&lt;/character&gt;</code> to your system prompt on JanitorAI (click to copy)</p>
             </div>
         </div>
         <div class="doc-item btn-blue">
