--- a/frontend/index.html
+++ b/frontend/index.html
@@ -173,7 +173,7 @@
           <h3>Free Access Configuration</h3>
         </div>
         <div class="free-notice">
-          <p><strong>Free access provided by together.ai</strong><br>No API key required. Choose your model below:</p>
+          <p><strong>Free access provided by Latex Proxy</strong><br>No API key required. Choose your model below:</p>
         </div>
         <div class="field">
           <span>Model</span>
